@@ -56,6 +56,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5262: Fixed bug in next rollover time computation in
+  TimedRotatingFileHandler.
+
 - Issue #6121: pydoc now ignores leading and trailing spaces in the
   argument to the 'help' function.
 
@@ -240,7 +243,7 @@ Library
   in Makefiles. This prevents compile errors when using syntax like:
   `LDFLAGS='-rpath=\$$LIB:/some/other/path'`. Patch by Floris Bruynooghe.
 
-- Issue #6062: In distutils, fixed the package option of build_ext. Feedback 
+- Issue #6062: In distutils, fixed the package option of build_ext. Feedback
   and tests on pywin32 by Tim Golden.
 
 - Issue #1309567: Fix linecache behavior of stripping subdirectories when
